[gd_scene load_steps=22 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Art/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/pause_button.png" type="Texture" id=2]
[ext_resource path="res://SettingsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/Selector/knight_selected.png" type="Texture" id=4]
[ext_resource path="res://Art/Selector/mage_unselected.png" type="Texture" id=5]
[ext_resource path="res://Art/Selector/mage_selected.png" type="Texture" id=6]
[ext_resource path="res://Art/Selector/knight_unselected.png" type="Texture" id=7]
[ext_resource path="res://Art/Selector/spearman_selected.png" type="Texture" id=8]
[ext_resource path="res://Art/Selector/spearman_unselected.png" type="Texture" id=9]
[ext_resource path="res://hero_choice_button_group.tres" type="ButtonGroup" id=10]
[ext_resource path="res://Art/Selector/assassin_selected.png" type="Texture" id=11]
[ext_resource path="res://Art/Selector/assassin_unselected.png" type="Texture" id=12]
[ext_resource path="res://Art/Selector/bomber_selected.png" type="Texture" id=13]
[ext_resource path="res://Art/Selector/bomber_unselected.png" type="Texture" id=14]
[ext_resource path="res://Game.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Art/Font/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Art/Font/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "ui_select"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="HUD" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )
button_group = ExtResource( 10 )

[node name="BackGround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.866667, 0.886275, 1 )

[node name="BestScore" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -68.0
margin_top = 5.0
margin_right = 69.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "Best Scores:
"
align = 1
max_lines_visible = 4

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -94.5
margin_top = -36.0
margin_right = 94.5
margin_bottom = -10.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
button_mask = 0
enabled_focus_mode = 0
shortcut = SubResource( 6 )
text = "Press space to start!"
flat = true

[node name="SettingsButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_bottom = 28.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 0.7
margin_top = -13.0
margin_bottom = 37.0

[node name="Knight" type="CheckBox" parent="HBoxContainer"]
margin_left = 24.0
margin_top = 3.0
margin_right = 68.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_icons/radio_checked = ExtResource( 4 )
custom_icons/radio_unchecked = ExtResource( 7 )
pressed = true
enabled_focus_mode = 0
group = ExtResource( 10 )
align = 1

[node name="Mage" type="CheckBox" parent="HBoxContainer"]
margin_left = 120.0
margin_top = 3.0
margin_right = 164.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_icons/radio_checked = ExtResource( 6 )
custom_icons/radio_unchecked = ExtResource( 5 )
enabled_focus_mode = 0
group = ExtResource( 10 )
align = 1

[node name="Shieldman" type="CheckBox" parent="HBoxContainer"]
margin_left = 217.0
margin_top = 3.0
margin_right = 261.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_icons/radio_checked = ExtResource( 8 )
custom_icons/radio_unchecked = ExtResource( 9 )
enabled_focus_mode = 0
group = ExtResource( 10 )
align = 1

[node name="Assassin" type="CheckBox" parent="HBoxContainer"]
margin_left = 314.0
margin_top = 3.0
margin_right = 358.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_icons/radio_checked = ExtResource( 11 )
custom_icons/radio_unchecked = ExtResource( 12 )
enabled_focus_mode = 0
group = ExtResource( 10 )
align = 1

[node name="Bomber" type="CheckBox" parent="HBoxContainer"]
margin_left = 411.0
margin_top = 3.0
margin_right = 455.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_icons/radio_checked = ExtResource( 13 )
custom_icons/radio_unchecked = ExtResource( 14 )
enabled_focus_mode = 0
group = ExtResource( 10 )
align = 1

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]

[node name="Game" parent="." instance=ExtResource( 15 )]
visible = false

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
